updates WiFi tasks

--- a/cw1_wifi.ipynb
+++ b/cw1_wifi.ipynb
@@ -159,18 +159,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do obserwacji sygnałów Wi-Fi przesyłanych w łączu radiowym należy wykorzystać model Simulink `spectrum_analysis.slx`.\n",
+    "W tym punkcie zostanie przeprowadzona analiza sygnałów sieci Wi-Fi w dziedzinie czasu i częstotliwości. Analizę należy przeprowadzić wykorzystujac odpowiednio modele `timeAnalysis.slx` oraz `spectrumAnalysis.slx`. Powyższe modele działają w trybie post-processingu - wczytują uprzednio zarejestrowany plik zawierający próbki sygnału w paśmie podstawowym.\n",
     "\n",
-    "Dokładność obserwacji można zwiększyć poprzez zmianę kilku parametrów układu radiowego ADALM-Pluto. Zmiany łatwo dokonać w aplikacji IIO Oscilloscope. W przypadku obserwacji sygnałów Wi-Fi warto:\n",
-    "- wyłączyć automatyczną regulację wzmocnienia\n",
-    "- wykorzystać programowalny filtr o szerokości kanału 20 MHz w celu redukcji szumów\n",
-    "\n",
-    "Widgety pozwalajace na zmianę tych parametrów są oznaczone na poniższym rysunku.\n",
-    "\n",
-    "<figure>\n",
-    "<img src=\"img/ad936x_params.jpg\" alt=\"adalm\" style=\"width:50%\">\n",
-    "<figcaption align = \"center\"><i></i></figcaption>\n",
-    "</figure>"
+    "Rejestrację sygnału należy przeprowadzić za pomocą modelu `wifiWriter.slx`. Czas trwania symulacji (Stop Time) a co za tym idzie rejestracji sygnału powinien być stosunkowo niewielki (do ok 0.5 s). Próbki zbierane przez moduł podczas 1 sekundy zajmują około 500 MB.\n"
    ]
   },
   {
@@ -215,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) Zmieniając ilość przesyłanych danych sprawdzić jak zmienia się długość pakietu Wi-Fi. Ocenić jaki narzut stanowi preambuła oraz nagłówki."
+    "c) Zmieniając ilość przesyłanych danych sprawdzić czy i jak zmienia się długość pakietu Wi-Fi. Ocenić jaki narzut stanowi preambuła oraz nagłówki."
    ]
   },
   {
@@ -302,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
